crates/trunk-ir/src/snapshots/trunk_ir__context__tests__clone_flat_ops.snap
---
source: crates/trunk-ir/src/context.rs
expression: output
---
core.module @test {
  func.func @original() -> core.i32 {
      %0 = arith.const {value = 7} : core.i32
      %1 = arith.neg %0 : core.i32
      func.return %1
  }
  func.func @cloned() -> core.i32 {
      %0 = arith.const {value = 7} : core.i32
      %1 = arith.neg %0 : core.i32
      func.return %1
  }
}
