crates/trunk-ir/src/snapshots/trunk_ir__context__tests__clone_op_with_nested_region.snap
---
source: crates/trunk-ir/src/context.rs
assertion_line: 1601
expression: output
---
core.module @test {
  func.func @original(%0: core.i1) -> core.i32 {
    ^bb0:
      %1 = scf.if %0 : core.i32 {
          %2 = arith.const {value = 1} : core.i32
          scf.yield %2
      } {
          %3 = arith.const {value = 2} : core.i32
          scf.yield %3
      }
      func.return %1
  }
  func.func @cloned(%0: core.i1) -> core.i32 {
    ^bb0:
      %1 = scf.if %0 : core.i32 {
          %2 = arith.const {value = 1} : core.i32
          scf.yield %2
      } {
          %3 = arith.const {value = 2} : core.i32
          scf.yield %3
      }
      func.return %1
  }
}
