crates/trunk-ir/src/snapshots/trunk_ir__context__tests__clone_region_with_forward_block_ref.snap
---
source: crates/trunk-ir/src/context.rs
assertion_line: 1618
expression: output
---
core.module @test {
  !t0 = core.func(core.i32)

  func.func @original() -> core.i32 {
    ^bb0:
      %0 = arith.const {value = 1} : core.i32
      cf.br %0 [^bb1]
    ^bb1(%1: core.i32):
      func.return %1
  }
  func.func @cloned() -> core.i32 {
    ^bb0:
      %0 = arith.const {value = 1} : core.i32
      cf.br %0 [^bb1]
    ^bb1(%1: core.i32):
      func.return %1
  }
}
